# SatGate

./: .gitignore  README.md  package.json  pnpm-lock.yaml
apps/web/: .env.example  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/app/demo/: page.tsx
apps/web/app/embed/[formId]/: page.tsx
apps/web/components/: DashboardClient.tsx  PrimaryButton.tsx  StatusBadge.tsx  TopLoader.tsx  WidgetForm.tsx
apps/web/lib/: api.ts  types.ts  webln.ts
apps/web/public/: widget.js
docs/: DATABASE.md  architecture.md  design-system.md  hackathon-plan.md  pitch.md
services/api/: .env.example  Cargo.toml  go.mod  go.sum  main.go  main_test.go
services/api/migrations/: 20260611000000_initial_schema.sql  20260611000001_add_payment_hash_to_messages.sql  20260611000002_additional_indices.sql  20260618000000_init.sql  20260618000001_add_min_amount.sql
services/api/src/: main.rs  tests.rs
services/wordpress-plugin/: satgo.php
